--- a/Air/Info.plist
+++ b/Air/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 gabriel.lewis. All rights reserved.</string>
+	<string>Copyright © 2018 Gabriel Lewis. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>Menu</string>
 	<key>NSPrincipalClass</key>
